# lift-lang

./: CLAUDE.md  COLLECTION_TYPE_ALIAS_METHODS.md  COMPILER_STATUS.md  COMPILER_TODO_CHECKLIST.md  Cargo.toml  DOCUMENTATION_INDEX.md  FEATURE_ANALYSIS.md  LICENSE  PARAMETER_SEMANTICS.md  PHASE5_COMPLETE.md  README.md  REFERENCE_COUNTING_WORKPLAN.md  SEMANTIC_REFACTORING_STATUS.md  STRUCT_COMPILER_DESIGN.md  STRUCT_FLT_FIX_SUMMARY.md  STRUCT_METHOD_BUG_REPORT.md  STRUCT_NAME_FIX_SUMMARY.md  build.rs  history.txt  lift.supp  test_repl_errors.txt
docs/: BENCHMARK_CHART.txt  BENCHMARK_RESULTS.md  COMPILER_COMPLETION_HANDOFF.md  COMPILER_LAMBDA_PLAN.md  COMPILER_RESULTS.md  COMPILER_STATUS.md  DOCUMENTATION_INDEX.md  FEATURE_RECOMMENDATIONS.md  HIGHER_ORDER_FUNCTIONS.md  INTERPRETER_OPTIMIZATION_ANALYSIS.md  INTERPRETER_OPTIMIZATION_RESULTS.md  LARGE_SCALE_BENCHMARKS.md  MANDELBROT_SUMMARY.md  METHOD_SYSTEM_ANALYSIS.md  MUTABILITY_GUIDE.md  PHASE6_HANDOFF.md  PROJECT_ORGANIZATION.md  README.md  SESSION_SUMMARY.md  STRUCT_IMPLEMENTATION_PLAN.md  STRUCT_IMPLEMENTATION_STATUS.md  SYNTAX.md  TIER1_IMPLEMENTATION_SUMMARY.md  USER_DEFINED_TYPE_METHODS.md  WHATS_NEW.md  benchmark_results.md  iterative_comparison.md
res/: grammar.lalrpop
scripts/: benchmark_mandelbrot.sh  valgrind_check.sh  validate_compiler.sh
src/: codegen.rs  compile_types.rs  compiler.rs  grammar.lalrpop  grammar.rs  interpreter.rs  lib.rs  main.rs  runtime.rs  semantic_analysis.rs  symboltable.rs  syntax.rs
tests/: README.md  demo_let_vs_let_var.lt  demo_parameter_semantics.lt  integration_tests.rs  (+99 more)
(+43 files in other folders)
