[package]
name = "lift-lang"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lalrpop = "0.20.0"
lalrpop-util = "0.20.0"
rustyline = {version = "13.0.0", features = ["derive","custom-bindings"]}

[build-dependencies]
lalrpop = "0.20.0"
