[package]
name = "lift-lang"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lalrpop = "0.20.0"
lalrpop-util = "0.20.0"
rustyline = {version = "13.0.0", features = ["derive","custom-bindings"]}
cranelift = "0.123"
cranelift-jit = "0.123"
cranelift-module = "0.123"
cranelift-frontend = "0.123"
cranelift-codegen = "0.123"
cranelift-native = "0.123"
target-lexicon = "0.12"

[build-dependencies]
lalrpop = "0.20.0"
